# Offline

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: manage.py
src/frontend/: package-lock.json  package.json  vue.config.js
src/frontend/src/: main.js
src/offline/: settings.py  urls.py  wsgi.py
src/templates/: application.html
