[tool.poetry]
name = "offline"
version = "0.1.0"
description = "The only usable and open source app to allow time off management."
authors = ["Valentin Famelart <famelartv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0"
djangorestframework = "^3.10"
django-webpack-loader = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
